# deepl-proxy

./: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT_IMPROVEMENTS.md  Dockerfile  README.md  build-and-push.sh  deepl-proxy.service  deploy-to-pi.md  docker-compose.pi.yml  docker-compose.yml  docker-deploy.md  env.example  network-helper.sh  network-setup.md  setup-autostart.sh  update-service.sh
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: lib.rs
